--- a/views/adminViews/adminDashboard.hbs
+++ b/views/adminViews/adminDashboard.hbs
@@ -38,6 +38,9 @@
                         <a class="nav-link" aria-current="page" href="/admin/orderManagement">Orders</a>
                     </li>
                     <li class="nav-item fw-bold">
+                        <a class="nav-link" aria-current="page" href="/admin/couponManagement">Coupons</a>
+                    </li>
+                    <li class="nav-item fw-bold">
                         <a class="nav-link" aria-current="page" href="/admin/salesReport">Sales Report</a>
                     </li>
                 </ul>
