--- a/views/userViews/changePassword.hbs
+++ b/views/userViews/changePassword.hbs
@@ -718,7 +718,7 @@
                 </div>
                 <div class="form-group">
                   <label>Current Password</label>
-                  <input name="currentPassword" title="Enter valid new password" type="password" class="form-control"
+                  <input name="currentPassword" type="password" class="form-control"
                     placeholder="Enter your current password" required minlength="8" maxlength="16">
                 </div>
                 <button id="verifyOTP" type="submit" class="btn btn-primary"> Change Password
@@ -785,7 +785,7 @@
         $("#passwordChangeForm").validate();
         // validate signup form on keyup and submit
         $(".regForm").validate({
-          errorLabelContainer: $(".regForm div.error")
+          errorLabelContainer: $(".regForm")
         });
       });
     </script>
