--- a/views/adminViews/productManagement.hbs
+++ b/views/adminViews/productManagement.hbs
@@ -187,8 +187,7 @@
 
     <!-- Edit Product Modal  -->
     {{#each productData}}
-    <div class="modal fade" id="editModal{{@index}}" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="editModal{{@index}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
